--- a/less/layout.less
+++ b/less/layout.less
@@ -26,4 +26,7 @@ h1, h2, h3, h4, h5 {
     border-bottom: 1px solid lightgray;
 }
 
-
+.space-footer {
+    .center;
+    background-color: @accent-color;
+}
